--- a/docs/.vuepress/theme/styles/color-mode.pcss
+++ b/docs/.vuepress/theme/styles/color-mode.pcss
@@ -29,6 +29,11 @@
     --sidebar-active-link-color: var(--link-color-default);
     --code-link-color: theme("colors.blue.lighter");
 
+    /* Buttons */
+    --button-background-color: theme("colors.gray.800");
+    --button-text-color: var(--white);
+    --button-border-color: #818EA2;
+
     /* Code */
     --code-color-default: #7F9CB8;
     --code-color-gold: #BD8E00;
@@ -66,6 +71,11 @@
   --sidebar-link-color: theme("colors.gray.400");
   --sidebar-active-link-color: var(--link-color-default);
   --code-link-color: theme("colors.blue.lighter");
+
+  /* Buttons */
+  --button-background-color: theme("colors.gray.800");
+  --button-text-color: var(--white);
+  --button-border-color: #818EA2;
 
   /* Code */
   --code-color-default: #7F9CB8;
